[project]
name = "curl-fuzzer-tools"
version = "0.1.0"
description = "Tooling for the curl-fuzzer repository"
requires-python = ">=3.9,<4"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "Max Dymond", email = "cmeister2@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
browser-tests = [
    "playwright>=1.58,<1.59",
    "pytest_playwright>=0.7.1,<0.8",
    "pytest>=9,<10",
]
python-tests = [
    "pytest>=9,<10",
]

[project.scripts]
read_corpus = "curl_fuzzer_tools.read_corpus:run"
generate_corpus = "curl_fuzzer_tools.generate_corpus:run"
corpus_to_pcap = "curl_fuzzer_tools.corpus_to_pcap:run"
generate_matrix = "curl_fuzzer_tools.generate_matrix:run"
generate_decoder_html = "curl_fuzzer_tools.generate_decoder_html:run"


[tool.setuptools.package-data]
curl_fuzzer_tools = ["templates/*.html"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "jinja2>=3.1.0,<4.0.0",
    "mypy==1.19.1",
    "ruff==0.15.0",
    "scapy>=2.6.1,<3.0.0",
]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
warn_return_any = true

[tool.ruff]
exclude = [
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".git"
]

# Match black
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B007","B016","C405","C416","COM818",
    "D200","D213","D204","D401","D415",
    "FURB129","N818","PERF401","PERF403","PIE790","PIE808","PLW0127",
    "Q004","RUF010","SIM101","SIM117","SIM118","TRY400","TRY401"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
